# uruk

arch/: PKGBUILD
caspar/: .cvsignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  THANKS  TODO  TODO.local  bootstrap  caspar.azm  configure.ac  configure.in  setversion
caspar/doc/: .cvsignore  ChangeLog.2002  Makefile.am  caspar-typesetting.azm  caspar.azm  caspar1.azm  casparize.azm  csp_helper.azm  csp_install.1  csp_mkdircp.1  csp_scp_keep_mode.1  csp_sucp.1  csp_sucp.azm  include.zmm
caspar/mk/: Makefile.am  caspar.mk  docbook.mk  install.mk  pod.mk
caspar/script/: Makefile.am  caspar  casparize  csp_install  csp_mkdircp  csp_scp_keep_mode  csp_sucp  sucp
caspar/sgml/: Makefile.am  html.dsl  print.dsl
debian/: TODO  caspar-doc.doc-base.caspar  caspar-doc.doc-base.caspar-typesetting  caspar-doc.doc-base.csp_helper  caspar-doc.doc-base.csp_sucp  caspar-doc.install  caspar.README.Debian  changelog  compat  control  copyright  doc-base.caspar  docs  postinst  postrm  preinst  prerm  rules  watch
debian/upstream/: signing-key.asc
rpm/: caspar.spec
solaris/doc/: log  readme.txt
solaris/pkg/: Makefile  Makefile.m4  README.Solaris  bootstrap  pkginfo.in  prototype
uruk/: AUTHORS  ChangeLog  ChangeLog.2003  Makefile.am  NEWS  README  THANKS  TODO  bootstrap  configure.ac  setversion
uruk/contrib/: Makefile.am  README  fw2dot.xsl  fw2urukrc.xsl  fw_2007-10.xsd  fw_firewall_2007-10.xsd  sample.xml
uruk/doc/: DCCP.html  Makefile.am  SCTP.html  debian-bug-704807.mbox  debian-bug-705687.mbox  debian-bug-720306.mbox  default  rc  rfc4890-icmpv6-firewall.sh  rfc4890.license.msg  uruk-auto.msg  uruk-ipv6.msg
uruk/etc/: rc_d_ipv6  rc_g_ipv6  rc_h_ipv6  rc_i_ipv6
uruk/init/: Makefile.am  autodetect-ips  enable-ipv6  uruk  uruk.in  uruk.service
uruk/lsb/: Makefile.am  init-functions
uruk/man/: Makefile.am  include.zmm.in  uruk-rc.azm  uruk-save.azm  uruk.azm  urukctl.azm
uruk/script/: Makefile.am  autodetect-ips  uruk  uruk-save  uruk-save.in  uruk.in  urukctl
