dnl
dnl $Id: configure.in,v 1.1 2002-02-26 17:52:17 joostvb Exp $
dnl
dnl After editing this file, run automake to regenerate Makefile.in's.
dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AM_INIT_AUTOMAKE(caspar, `cat $srcdir/VERSION`)

AC_PROG_INSTALL

AC_OUTPUT([
   Makefile
   mk/Makefile
])

