dnl
dnl $Id: configure.in,v 1.2 2002-03-13 12:09:55 joostvb Exp $
dnl
dnl After editing this file, run automake to regenerate Makefile.in's.
dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AM_INIT_AUTOMAKE(caspar, `cat $srcdir/VERSION`)

AC_PROG_INSTALL

AC_OUTPUT([
   Makefile
   mk/Makefile
   sgml/Makefile
])

