## Process this file with automake to produce Makefile.in
## this file maintained at http://git.mdcc.cx/uruk.git

## Copyright (C) 2007 Joost van Baal
##
## This script is free software; you can distribute it and/or modify it
## under the terms of the GNU GPL.  See the file COPYING.

contribdir = $(datadir)/doc/@PACKAGE_TARNAME@/contrib
contrib_DATA = fw_2007-10.xsd fw2dot.xsl fw2urukrc.xsl \
 fw_firewall_2007-10.xsd  README  sample.xml

EXTRA_DIST = $(contrib_DATA)

