## Process this file with automake to produce Makefile.in
## this file maintained using arch at http://arch.gna.org/uruk/

## Copyright (C) 2003 Stichting LogReport Foundation logreport@logreport.org
## Copyright (C) 2003, 2004 Tilburg University http://www.uvt.nl/
## Copyright (C) 2003, 2004, 2005 Joost van Baal

# This script is free software; you can distribute it and/or modify it
# under the terms of the GNU GPL.  See the file COPYING.

exampledir = $(datadir)/doc/@PACKAGE_TARNAME@/examples
example_DATA = rc default

EXTRA_DIST = $(example_DATA)

